[package]
name = "rscan"
version = "0.2.0"
edition = "2021"
categories = ["scan", "network", "icmp"]
description = "Fast scan network by sending icmp, tcp, udp packets, inspired by nmap but doesn't depend on nmap"
keywords = ["icmp", "tcp", "udp", "nmap", "scan"]
authors = ["Gongzhengyang <gongzhengyangfindyourdream@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/gongzhengyang/rscan"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rscanner = { path = "rscanner" }
tokio = { version = "1", features = ["full", "tracing"]}
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.2", features = ["derive"] }
pnet = "0.33"
console-subscriber = "0.1.9"

[workspace]
members = [".", "rscanner"]
