[package]
name = "rscan"
version = "0.6.0"
edition = "2021"
categories = ["asynchronous", "command-line-utilities", "network-programming"]
description = "Fast scan network by sending icmp, tcp, udp packets, inspired by nmap but doesn't depend on nmap"
keywords = ["icmp", "tcp", "udp", "nmap", "scan"]
authors = ["Gongzhengyang <gongzhengyangfindyourdream@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/gongzhengyang/rscan"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
console-subscriber = "0.2"
pnet = "0.34"
rscanner = { path = "rscanner" }
tokio = { version = "1", features = ["full", "tracing"] }
tracing = "0.1"
tracing-subscriber = "0.3"
cached = "0.48"
chrono = "0.4"

[workspace]
members = [".", "rscanner"]

[profile.release]
lto = true
strip = true
