[package]
name = "rscanner"
version = "0.4.2"
edition = "2021"
categories = ["asynchronous", "command-line-utilities", "network-programming"]
description = "Fast scan network by sending icmp, tcp, udp packets, inspired by nmap but doesn't depend on nmap"
keywords = ["icmp", "tcp", "udp", "nmap", "scan"]
authors = ["Gongzhengyang <gongzhengyangfindyourdream@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/gongzhengyang/rscan"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1"
clap = { version = "4.2", features = ["derive"] }
hashbrown  = "0.14"
ipnetwork = "0.20"
itertools = "0.11"
pnet = "0.34"
pnet_transport = "0.34"
rand = "0.8"
rlimit = "0.10"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full", "tracing"] }
tracing = "0.1"
